--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     left: 0;
     height: 100%;
     width: 35%;
-    padding: 124px 54px 72px;
+    padding: 54px 80px 72px;
     background-position: left top;
     background-size: auto, cover;
     text-align: left;
@@ -115,6 +115,12 @@ legend{
     border-radius: 7px;
     font-size: .8em;
     cursor: pointer;
-}
+    margin-top: 10px;
+}    
 
-  
+.icones-footer{
+    width:40px;
+    height: 40px;
+    margin-top: 300px;
+    margin-left: 3px;
+}
